@@ -671,6 +671,6 @@ qmail-lspawn(8),
 qmail-dkim(8),
 dk-filter(8),
 qmail-rspawn(8),
+svc(8),
 fsync(2),
-fdatasync(2),
-svc(8)
+fdatasync(2)
