@@ -86,4 +86,4 @@ will be passed to
 .IR command .
 
 .SH "SEE ALSO"
-qmail-command(8), maildircmd(1), env(1), serialsmtp(1).
+qmail-command(8), maildircmd(1), serialsmtp(1), env(1)
