@@ -128,6 +128,8 @@ o - New program printass to print entries in users/cdb, users/assign file
 72. qmta-send.c, slowq-send.c, qmail-send.c, todo-proc.c: log pid during
     startup.
 73. todo-proc.c: handle qmail-clean termination
+- 24/12/2023
+74. qscheduler.c: Handle EINTR for mq_receive().
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
